--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.3.9",
+    "@trpc/client": "^10.0.0-proxy-beta.0",
+    "@trpc/next": "^10.0.0-proxy-beta.0",
+    "@trpc/react": "^10.0.0-proxy-beta.0",
+    "@trpc/server": "^10.0.0-proxy-beta.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
