--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.3.1",
     "@tanstack/react-query": "^4.3.9",
     "@trpc/client": "^10.0.0-proxy-beta.0",
     "@trpc/next": "^10.0.0-proxy-beta.0",
@@ -26,6 +27,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "prisma": "^4.3.1",
     "typescript": "4.8.3"
   }
 }
