--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@trpc/next": "^10.0.0-proxy-beta.0",
     "@trpc/react": "^10.0.0-proxy-beta.0",
     "@trpc/server": "^10.0.0-proxy-beta.0",
+    "dracula-ui": "^1.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.10.0",
+    "tailwind-dracula": "^1.1.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
