--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@trpc/next": "^10.0.0-proxy-beta.0",
     "@trpc/react": "^10.0.0-proxy-beta.0",
     "@trpc/server": "^10.0.0-proxy-beta.0",
+    "date-fns": "^2.29.3",
     "dracula-ui": "^1.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
