--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
     "@prisma/client": "4.3.1",
     "@tanstack/react-query": "^4.3.9",
     "@trpc/client": "^10.0.0-proxy-beta.0",
@@ -19,6 +20,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
     "superjson": "^1.10.0",
     "zod": "^3.19.1"
   },
